--- a/html/patient.html
+++ b/html/patient.html
@@ -29,7 +29,7 @@
             </div>
             <div>
                 <label for="">No of visit:</label>
-                <input type="text" placeholder="0">
+                <input type="text" placeholder="0" disabled>
             </div>
             <div>
                 <label for="address">Patients ID:</label>
