--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="./css.css">
 </head>
 <body>
-    <section>
+    <div><p class="my_name">Fatima Animu</p></div>
+    <section id="index_section">
         <h1>Landing page</h1>
         <div>
             <h2>Register as</h2>
             <ul>
                 <li><a href="./html/patient.html">A Patient</a></li>
+                <li id="admin_page"><a href="./html/admin.html">An Admin</a></li>
                 <li><a href="./html/employee_form.html">An Employee</a></li>
-                <li><a href="./html/admin.html">An Admin</a></li>
             </ul>
         </div>
     </section>
