added some patterns

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css.css">
 </head>
 <body>
-    <div><p class="my_name">Fatima Animu</p></div>
+    <div><p class="my_name">Fatima Aminu</p></div>
     <section id="index_section">
         <h1>Landing page</h1>
         <div>
