--- a/html/patient.html
+++ b/html/patient.html
@@ -20,6 +20,10 @@
                 <input type="date" placeholder="dd/mm/yy" id="dob" required>
             </div>
             <div>
+                <label for="number">Phone Number:</label>
+                <input type="tel" pattern="\+234[0-9]{10}" placeholder="+234123456789" title="Phone number must be in the format: +234 followed by 10 digits." required/>
+            </div>
+            <div>
                 <label for="gender" id="genderlabel">Gender:</label>
                 <select name="gender" id="gender" required>
                     <option value="male" id="male">-------gender-------</option>
