eddited name attribute in drug grade

--- a/html/admin.html
+++ b/html/admin.html
@@ -65,9 +65,9 @@
             <div>
                 <label for="grade">Grade:</label>
                 <div class="radio_divs">
-                    <input type="radio" name="gradeA" id="gradeA">A
-                    <input type="radio" name="gradeB" id="gradeB">B
-                    <input type="radio" name="gradeC" id="gradeB">C
+                    <input type="radio" name="grade" id="gradeA">A
+                    <input type="radio" name="grade" id="gradeB">B
+                    <input type="radio" name="grade" id="gradeB">C
                 </div>
             </div>
             <div>
